<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle_btn">Trộn bài</string>
    <string name="favourites_btn">Yêu thích</string>
    <string name="playlist_btn">Playlists</string>
    <string name="chat_btn">Chat</string>
    <string name="total_songs">Total Songs</string>
    <string name="world_of_music">World of Music</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading..</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to\nWorld of Music</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Cài đặt</string>
    <string name="about">Về ứng dụng</string>
    <string name="exit">Đăng xuất</string>
    <string name="song_album">Song Album</string>
    <string name="min_15">15 Phút</string>
    <string name="min_30">30 Phút</string>
    <string name="min_60">60 Phút</string>
    <string name="search_view">Search View</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Tên Playlist</string>
    <string name="playlist_delete">Delete</string>
    <string name="user_name">Tên của bạn</string>
    <string name="add_song">Thêm</string>
    <string name="remove_all">Xóa toàn bộ</string>
    <string name="search_song">Search Song</string>
    <string name="topic_feedback">Topic i.e. Suggestion, Error, etc.</string>
    <string name="email_feedback">Email Address (Optional)</string>
    <string name="send">Gửi</string>
    <string name="set_theme">Chọn màu nền</string>
    <string name="sort_by">Sắp xếp</string>
    <string name="version_name">Phiên bản:</string>
    <string name="play_next">Phát tiếp</string>
    <string name="play_next_note">Tip: Nhấn giữ bài hát để thêm vào mục phát tiếp theo. &#128522; </string>
    <string name="favourite_note">Tip: Hãy chơi nhạc và click vào &#10084; để thêm vào mục yêu thích. </string>
    <string name="playlist_note">Tip: Click vào ➕ để tạo mới Playlist. </string>
    <string name="hint_enter_message">Gửi lời chào đến chatbot</string>
    <string name="recommend_message">Dưới đây là danh sách bài hát mà hệ thống đã gợi ý\n
    Chúc bạn nghe nhạc vui vẻ &#128522;</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="dont_have_account">Bạn chưa có tài khoản?</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="already_have_account">Bạn đã có tài khoản rồi?</string>
</resources>